--- a/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
+++ b/BeamWallet/ViewControllers/Login/CreateWallet/CreateWalletProgressViewController.xib
@@ -24,7 +24,6 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateWalletProgressViewController" customModule="BeamWallet" customModuleProvider="target">
             <connections>
                 <outlet property="cancelButton" destination="FIX-uE-nue" id="eWY-zi-uAk"/>
-                <outlet property="logoYOffset" destination="CK3-Xg-lx9" id="v8E-QH-4yO"/>
                 <outlet property="progressTitleLabel" destination="ZqN-A1-TIj" id="gbH-jG-pwq"/>
                 <outlet property="progressValueLabel" destination="ptl-BF-NdL" id="erB-PX-mi1"/>
                 <outlet property="progressView" destination="bZD-dB-5UV" id="whc-Ut-x2W"/>
@@ -38,18 +37,17 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="tiL-BA-jJU">
-                    <rect key="frame" x="156.66666666666666" y="140.33333333333334" width="100.99999999999997" height="90"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="101" id="D3E-hx-K1X"/>
-                        <constraint firstAttribute="height" constant="90" id="cWg-aA-m4p"/>
-                    </constraints>
-                </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-fL-4oD">
-                    <rect key="frame" x="80.666666666666686" y="340.33333333333331" width="253" height="55.666666666666686"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Pob-fL-4oD">
+                    <rect key="frame" x="80.666666666666686" y="220.33333333333337" width="253" height="175.66666666666663"/>
                     <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="tiL-BA-jJU">
+                            <rect key="frame" x="0.0" y="0.0" width="253" height="90"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="90" id="cWg-aA-m4p"/>
+                            </constraints>
+                        </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Creating wallet" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZqN-A1-TIj">
-                            <rect key="frame" x="0.0" y="0.0" width="253" height="21.666666666666668"/>
+                            <rect key="frame" x="0.0" y="119.99999999999999" width="253" height="21.666666666666671"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="18"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
@@ -59,7 +57,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ptl-BF-NdL">
-                            <rect key="frame" x="0.0" y="36.666666666666686" width="253" height="0.0"/>
+                            <rect key="frame" x="0.0" y="156.66666666666666" width="253" height="0.0"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                             <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -68,7 +66,7 @@
                             </userDefinedRuntimeAttributes>
                         </label>
                         <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YX2-nC-HFt">
-                            <rect key="frame" x="0.0" y="51.666666666666686" width="253" height="4"/>
+                            <rect key="frame" x="0.0" y="171.66666666666666" width="253" height="4"/>
                             <subviews>
                                 <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bZD-dB-5UV">
                                     <rect key="frame" x="-2" y="0.0" width="257" height="4"/>
@@ -96,7 +94,7 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sOp-KF-vke">
-                            <rect key="frame" x="0.0" y="55.666666666666686" width="253" height="0.0"/>
+                            <rect key="frame" x="0.0" y="175.66666666666666" width="253" height="0.0"/>
                             <string key="text">Only the wallet balance (UTXO) can be restored,  transaction info is always private
 and never kept in the blockchain.</string>
                             <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="14"/>
@@ -138,12 +136,10 @@ and never kept in the blockchain.</string>
             </subviews>
             <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Pob-fL-4oD" firstAttribute="top" secondItem="tiL-BA-jJU" secondAttribute="bottom" constant="110" id="CK3-Xg-lx9"/>
                 <constraint firstItem="FIX-uE-nue" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="DDs-AX-uiW"/>
-                <constraint firstItem="Pob-fL-4oD" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="YDf-uM-xWZ"/>
+                <constraint firstItem="Pob-fL-4oD" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-60" id="YDf-uM-xWZ"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="FIX-uE-nue" secondAttribute="bottom" constant="50" id="bS7-Oc-rWf"/>
                 <constraint firstItem="Pob-fL-4oD" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tcF-90-2XT"/>
-                <constraint firstItem="tiL-BA-jJU" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="zY5-O9-55M"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
