--- a/BeamWallet/Controls/BMEmptyView.xib
+++ b/BeamWallet/Controls/BMEmptyView.xib
@@ -16,28 +16,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e43-JB-qgs" customClass="UTXOEmptyView" customModule="BeamWallet" customModuleProvider="target">
+        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e43-JB-qgs" customClass="BMEmptyView" customModule="BeamWallet" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yf8-vz-6X6">
                     <rect key="frame" x="57" y="358.5" width="300" height="79.5"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconUtxoEmptyState" translatesAutoresizingMaskIntoConstraints="NO" id="uwt-Zu-98P">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconAddressbookEmptyState" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uwt-Zu-98P">
                             <rect key="frame" x="125" y="0.0" width="50" height="50"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="50" id="ZUT-lA-D0a"/>
-                                <constraint firstAttribute="width" constant="50" id="yGF-Hw-42t"/>
-                            </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="utxo_empty" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFb-vs-LN1">
-                            <rect key="frame" x="111" y="60" width="78" height="19.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="addresses_empty" textAlignment="center" lineBreakMode="middleTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PFb-vs-LN1">
+                            <rect key="frame" x="91" y="60" width="118" height="19.5"/>
                             <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="16"/>
                             <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
-                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="utxo_empty"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="localizationKey" value="addresses_empty"/>
                             </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
@@ -46,14 +42,18 @@
                     </constraints>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" red="0.01176470588" green="0.18039215689999999" blue="0.28627450980000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Yf8-vz-6X6" firstAttribute="centerY" secondItem="e43-JB-qgs" secondAttribute="centerY" constant="-50" id="Bce-Ct-qzz"/>
                 <constraint firstItem="Yf8-vz-6X6" firstAttribute="centerX" secondItem="e43-JB-qgs" secondAttribute="centerX" id="EeK-9m-BIu"/>
             </constraints>
+            <connections>
+                <outlet property="imageView" destination="uwt-Zu-98P" id="zmP-KK-kBd"/>
+                <outlet property="textLabel" destination="PFb-vs-LN1" id="Smd-LI-vEC"/>
+            </connections>
         </view>
     </objects>
     <resources>
-        <image name="iconUtxoEmptyState" width="50" height="50"/>
+        <image name="iconAddressbookEmptyState" width="50" height="50"/>
     </resources>
 </document>
